class Endpoints {
  Endpoints._();

  // base url
  static const String baseUrl = "https://assignment.shly.me/";

  // receiveTimeout
  static const int receiveTimeout = 15000;

  // connectTimeout
  static const int connectionTimeout = 15000;
}
